--- a/media/css/style.css
+++ b/media/css/style.css
@@ -1,4 +1,6 @@
+@charset "UTF-8";
 
+/* Estilos global */
 * {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     padding: 0;
@@ -6,29 +8,34 @@
     box-sizing: border-box;
 }
 
+/* Estilos para o corpo */
 body {
     background-color: #eaf0eb;
 }
 
-
-/* Estilos para o ícone do menu (hamburguer) */
-.menu-toggle {
-    display: none;
-    cursor: pointer;
-    padding: 15px;
-    display: flex; /* Usar flexbox para alinhar horizontalmente */
-    align-items: center; /* Alinhar verticalmente no centro */
+a {
+    text-decoration: none; /* Remove a sublinhado do link */
+    color: #1e90ff; /* Define a cor do link (azul) */
 }
 
+a:hover {
+    color: #ff4500; /* Cor do link ao passar o mouse (laranja) */
+}
 
+/* Estilos para o ícone do menu (caveira) */
+.menu-toggle {
+    display: none;
+    cursor:pointer;
+    padding: 5px;
+    display: flex; /* Usar flexbox para alinhar horizontalmente */
+}
 
 .bar {
     display: none;
     width: 30px;
-    height: 3px;
-    background-color: #2c2a2a;
-    margin: 6px 0;
-    transition: 0.4s;
+    height: 60px;
+    transform: scaleX(-1);
+    transition: transform 1s;
 }
 
 /* Estilos para o texto ao lado do ícone do menu (hamburguer) */
@@ -37,14 +44,20 @@ body {
     font-size: 5vw;
     color: #2c2a2a;
     padding: 5px;
-    margin-left: 10px;
-    align-self: center; /* Alinhar verticalmente no centro */
     border: 2px solid black;
-    
+}
+
+.mobile-nav-list {
+    display: none;
 }
 
 /* Estilos para o menu de navegação */
 nav {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 1000;
     background-color: #eaf0eb;
     text-align: right;
     padding: 25px;
@@ -53,20 +66,8 @@ nav {
     align-items: center; /* Alinhar verticalmente no centro */
 }
 
-nav.nav-fixed {
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    background-color: #eaf0eb; /* Cor de fundo da navbar fixa */
-    z-index: 1000; /* Para que a navbar fixa fique acima de outros elementos */
-}
-
-
-.nav-list {
-    list-style: none;
-    padding: 0;
-    margin: 0;
+.mobile-nav {
+    display: none;
 }
 
 .nav-list li {
@@ -74,41 +75,30 @@ nav.nav-fixed {
     margin-left: 20px;
 }
 
-/* Estilos para o menu de navegação quando o ícone do menu (hamburguer) é clicado */
-.nav-open {
-    display: block;
-}
-
-.nav-closed {
-    display: none;
-}
-
-a {
-    font-size: 1vw;
+nav a {
+    font-size: 1em;
     text-decoration: none;
     color: #2c2a2a;
     padding: 10px;
 }
 
-a:hover {
+nav a:hover {
     color: #1657c0;
 }
 
-/* Estilos para o menu de navegação quando o ícone do menu (hamburguer) é clicado */
-.nav-open {
-    display: block;
-}
 
-.nav-closed {
-    display: none;
-}
-
-
-/* Estilize a div pai */
+/* Div pai */
 .divMaster {
     position: relative;
-    width: 100%; /* 100% da largura da janela */
-    height: 100vh; /* 100% da altura da janela */
+    width: 100%;
+    height: 100vh;
+}
+
+.divHome {
+    display: block;
+    width: 100%;
+    height: 100%;
+    padding-top: 30px;
 }
 
 /* Estilize a div preta */
@@ -131,7 +121,6 @@ a:hover {
     top: -14px;
 }
 
-
 /* Estilize a imagem para que ela ocupe 100% da largura e altura da div branca */
 .whiteDiv img {
     width: 100%;
@@ -144,7 +133,7 @@ a:hover {
 
 /* Estilize a sobreposição da imagem quando o mouse passa por cima */
 .whiteDiv img:hover {
-    opacity: 0.9; /* Tornar a sobreposição visível */
+    opacity: 0.8; /* Tornar a sobreposição visível */
     -webkit-transform: scale(0.95);
     -ms-transform: scale(0.95);
     transform: scale(0.95);
@@ -160,70 +149,58 @@ a:hover {
     min-width: 190px;
     position: absolute;
     left: 56%;
-    top: 50px; 
+    top: 150px; 
     padding: 10px;
     border: 10px solid #eaf0eb;
 }
 
 #bvDiv h1 {
     margin-top: 2% !important;
-
+    font-size: 1.6em;
 }
 
 #bvDiv h2 {
     margin-top: 8% !important;
-    font-size: 1.2vw; /* Tamanho de texto proporcional à largura da janela */
+    font-size: 1.2em;
 }
 
 #bvDiv h3 {
     padding-left: 10px;
     margin-top: 6% !important;
-    font-size: 1vw; /* Tamanho de texto proporcional à largura da janela */
+    font-size: 1em;
     color: #292269;
 }
 
 h3 img {
-    vertical-align: middle; /* Centralizar a imagem verticalmente em relação ao texto */
+    vertical-align: middle;
 }
 
-
 #bvDiv a {
-    font-size: 1vw; /* Tamanho de texto proporcional à largura da janela */
-
+    font-size: 1em;
 }
 
 #bvDiv a:hover {
     color: #1657c0;
 }
  
-
-marquee {
-    background-color: rgba(0, 255, 255, 0);
+.divSomos {
     width: 100%;
-    position: absolute;
-    top: 92%;
+    height: 100%;
 }
 
-marquee p {
-    font-family:fantasy;
-    font-size: 2em;
-    color: #696969;
-}
-
-
-.quemsouDiv {
+.tesouraDiv {
     background-color: #dddada;
     width: 50%;
     height: 80%;
     min-height: 420px;
     position: absolute;
-    top: 7%;
-    padding: 30px;
+    top: 10%;
+    padding-top: 80px;
+
 }
 
-.quemsouDiv img {
+.tesouraDiv img {
     width: 50%;
-    height: 77%;
     min-height: 200px;
     object-fit: cover;
 }
@@ -231,25 +208,24 @@ marquee p {
 
 .filthDiv {
     background-color: #eaf0eb;
-    width: 40%;
+    width: 50%;
     height: 50%;
     position: absolute;
     left: 18%;
-    top: 120px;
+    top: 190px;
 }
 
 
 .filthDiv img {
     width: 100%;
     height: 100%;
-    min-height: 400px;
     border: 15px solid #eaf0eb;
     object-fit: cover;
     transition: 0.9s;
 }
 
 
-#ftDiv {
+#htDiv {
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     color: #696969;
     width: 17%;
@@ -257,75 +233,256 @@ marquee p {
     min-height: 270px;
     min-width: 190px;
     position: absolute;
-    left: 60%;
+    left: 70%;
     top: 90px; 
     padding: 10px;
     border: 10px solid #eaf0eb;
 }
 
 
-#ftDiv h1 {
+#htDiv h1 {
     margin-top: 2% !important;
     font-size: 2vw;
     padding: 0 0 20px 0;
 }
 
-#ftDiv p {
+#htDiv p {
     font-size: 1vw;
 }
 
-
-
-.agendarDiv {
-    background-color: #053c53e7;
-    width: 70%;
-    height: 80%;
-    margin: auto;
-    padding: 50px;
+.divContato {
+    width: 100%;
+    height: 100%;
+    padding-top: 150px;
 }
 
-.agendarDiv h1 {
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-    font-size: 3em;
-    color: #f0111198;
-    margin-bottom: 20px;
+.divContato .container {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
 }
 
-.agendarDiv h2 {
-    margin-bottom: 50px;
-    font-size: 1.3em;
-    color: #e7e5e5;
+
+.divContato .container .box h1, h2, p {
+    padding-bottom: 20px;
 }
 
-.agendarDiv p {
-    margin-bottom: 10px;
-    font-size: 1em;
-    color: #e7e5e5;
+
+.divContato .box {
+    width: calc(33.33% - 20px); /* 33.33% width with 20px margin between boxes */
+    background-color: #242b33;
+    color: #fff;
+    text-align: center;
+    padding: 20px;
+    margin: 10px;
+    box-sizing: border-box;
 }
+
+
+.divContato .box input[type="text"],
+.divContato .box input[type="email"],
+.box textarea,
+.box input[type="submit"] {
+    width: 100%;
+    padding: 10px;
+    background-color: #fff;
+    margin: 10px 0;
+    border: none;
+    border-radius: 4px;
+    font-size: 16px;
+}
+
+.box input[type="submit"] {
+    background-color: #e74c3c;
+    color: #fff;
+    cursor: pointer;
+}
+
+.box input[type="submit"]:hover {
+    background-color: #c0392b;
+}
+
+.divContato .container img {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    object-fit: cover;
+    top: 80px;
+    z-index: -1;
+    opacity: 90%;
+} 
+ 
+
+
 
 /* Estilos para o menu de navegação em dispositivos móveis */
 @media screen and (max-width: 768px) {
+
+    /* Estilos para o corpo */
+    body {
+        background-color: #1657c0;
+    }
+
+
     .menu-toggle {
         display: block;
     }
 
     .bar {
         display: block;
+
     }
 
     .mobile-text {
         display: block;
     }
 
-    #bvDiv{
-        display: none;
-    }
-
     .nav-list {
         display: none;
     }
 
-    .nav-list.active {
+    .mobile-nav {
+        position: fixed;
+        top: 10%;
+        left: 0;
+        right: 0;
+        z-index: 900;
+        background-color: #eaf0eb;
+        text-align: center;
+        padding: 25px;
+    }
+    
+
+    /* Mostrar o nav-list abaixo do menu de hambúrguer */
+    .mobile-nav-list {
+        display: block;
+        text-align: center;
+        padding: 10px;
+    }
+
+    .mobile-nav-list li {
+        display: block;
+        margin-left: 20px;
+        border: 2px solid #000;
+        margin: 5px;
+    }
+
+    .mobile-nav-list li:hover {
+        border: 2px solid #1657c0;
+    }
+    
+    nav a {
+        display: block;
+        font-size: 1em;
+        text-decoration: none;
+        color: #2c2a2a;
+        padding: 10px;
+    }
+    
+    nav a:hover {
+        color: #1657c0;
+    }
+    
+
+    .container {
         display: block;
     }
+    
+    .box {
+        width: 90%;
+    }
 }
+
+@media screen and (min-width: 768px) and (max-width: 992px) { /* Conf para tablet */
+
+    #bvDiv {
+        width: 35%;
+        height: 330px;
+    }
+
+    #bvDiv h1 {
+        font-size: 1.2em;
+    }
+    
+    #bvDiv h2 {
+        font-size: 1em;
+    }
+    
+    #bvDiv h3 {
+        padding-left: 10px;
+        margin-top: 5% !important;
+        font-size: 4vw;
+        color: #292269;
+    }
+
+    #bvDiv h3 {
+        font-size: 1em;
+    }
+    
+    h3 img {
+        vertical-align: middle;
+    }
+    
+    #bvDiv a {
+        font-size: 1em;
+    }
+    
+    .tesouraDiv {
+        width: 70%;
+        height: 90%;
+        min-height: 0px;
+        position: absolute;
+        top: 1%;
+        padding-top: 80px;
+    }
+
+    .filthDiv {
+        width: 70%;
+        height: 50%;
+        top: 17%;
+    }
+    
+    #htDiv {
+        color: #696969;
+        width: 60%;
+        left: 2%;
+        top: 57%; 
+        padding: 10px;
+        border: 0px solid #eaf0eb;
+    }
+    
+    
+    #htDiv h1 {
+        font-size: 1.5em;
+    }
+    
+    #htDiv p {
+        font-size: 1.5vw;
+    }
+    
+    .divContato {
+        padding-top: 70px;
+    }
+    
+
+
+    .divContato .box {
+        
+        width: 98%;
+        background-color: #242b33;
+        color: #fff;
+        text-align: center;
+        margin: 1%;
+    }
+}
+
+
+
+/* Typical Device Breakpoints
+=============================
+Pequenas telas: até 600px
+Celular: de 600px até 768px
+Tablet: de 768px até 992px
+Desktop: 992px até 1200px
+Grandes telas: acima de 1200px
+*/
